# minesweeper-bevy

./: Cargo.toml  README.md
assets/sprites/: graphics.aseprite
board_plugin/: Cargo.toml
board_plugin/src/: bounds.rs  events.rs  lib.rs  queue.rs
board_plugin/src/components/: bomb.rs  bomb_neighbor.rs  coordinates.rs  covered.rs  flag.rs  mod.rs  tile_cover.rs  uncover.rs
board_plugin/src/resources/: board.rs  board_assets.rs  board_options.rs  mod.rs  tile.rs  tile_map.rs
board_plugin/src/systems/: input.rs  mark.rs  uncover.rs
src/: main.rs
