[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

[features]
default = ["debug"]
debug = ["board_plugin/debug", "bevy-inspector-egui"]

[dependencies]
bevy = "0.10.1"
bevy-inspector-egui = { version = "0.18.3", optional = true }
board_plugin = { path = "board_plugin" }

[workspace]
members = [
    "board_plugin"
]
