[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

[features]
default = ["debug"]
debug = ["board_plugin/debug", "bevy-inspector-egui"]

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy-inspector-egui = { version = "0.18.3", optional = true }
board_plugin = { path = "board_plugin" }

[workspace]
members = [
    "board_plugin"
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
