[package]
name = "board_plugin"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["colored", "bevy-inspector-egui"]

[dependencies]
bevy = "0.10.1"
bevy-inspector-egui = { version = "0.18.3", optional = true }
colored = { version = "2.0.0", optional = true }
rand = "0.8.5"
serde = "1.0.159"

# # Engine
# [dependencies.bevy]
# version = "0.10.1"
# default-features = false
# features = ["render"]

# # WASM dependencies
# [target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
# version
